--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,21 +3,16 @@ server.port=8080
 server.contextPath=
 server.session.tracking-modes=cookie
 server.session.cookie.http-only=true
-
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
-
 server.tomcat.uri-encoding=UTF-8
 #server.address=192.168.1.88
-
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
 spring.http.multipart.maxFileSize=10Mb
 spring.http.multipart.maxRequestSize=10Mb
-
-
 #MyBatisPlus
 mybatis-plus.mapper-locations=classpath:/mapper/*Dao.xml
 mybatis-plus.typeAliasesPackage=com.secret.entity
@@ -25,12 +20,9 @@ mybatis-plus.global-config.id-type=0
 mybatis-plus.global-config.field-strategy=0
 mybatis-plus.global-config.db-column-underline=true
 mybatis-plus.global-config.refresh-mapper=true
-
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.configuration.cache-enabled=false
-
 spring.resources.static-locations=/statics
-
 #JDBC
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -52,8 +44,8 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat,wall,log4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 # 加密密钥
-config.jwt.secret= iwqjhda8232bjgh432[cicada-smile]
+config.jwt.secret=iwqjhda8232bjgh432[cicada-smile]
 # token有效时长
-config.jwt.expire= 3600
+config.jwt.expire=3600
 # header 名称
-config.jwt.header= token
+config.jwt.header=token
