--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,54 +6,14 @@ seo.keywords=\u8A66\u6BC5-\u601D\u4F1F
 seo.description=\u4E3B\u8981\u6D89\u53CA\u6280\u672F\uFF1AJava\u540E\u7AEF\u5F00\u53D1\u3001\u805A\u5408\u652F\u4ED8\u3001\u516C\u4F17\u53F7\u5F00\u53D1\u3001\u5F00\u6E90\u7231\u597D\u8005\u3001Linux
 server.tomcat.uri-encoding=UTF-8
 #server.address=192.168.1.88
-
 spring.aop.auto=true
 spring.aop.proxy-target-class=true
-
-#Elasticsearch\u914D\u7F6E
-#\u9ED8\u8BA4\u4E3Aelasticsearch
-spring.data.elasticsearch.cluster-name=secret
-#elasticsearch\u65E5\u5FD7\u5B58\u50A8\u76EE\u5F55
-spring.data.elasticsearch.properties.path.logs=elasticsearch/logs
-#\u5B58\u50A8\u7D22\u5F15\u7684\u4F4D\u7F6E
-spring.data.elasticsearch.properties.path.home=target/elastic
-#elasticsearch\u6570\u636E\u5B58\u50A8\u76EE\u5F55
-spring.data.elasticsearch.properties.path.data=elasticsearch/data
-#\u8FDE\u63A5\u8D85\u65F6\u7684\u65F6\u95F4
-spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
-#\u914D\u7F6Ees\u8282\u70B9\u4FE1\u606F\uFF0C\u9017\u53F7\u5206\u9694\uFF0C\u5982\u679C\u6CA1\u6709\u6307\u5B9A\uFF0C\u5219\u542F\u52A8ClientNode
-spring.data.elasticsearch.cluster-nodes=192.168.1.88:9300
-#\u662F\u5426\u672C\u5730\u8FDE\u63A5
-spring.data.elasticsearch.local=false
-#\u4ED3\u5E93\u4E2D\u6570\u636E\u5B58\u50A8
-spring.data.elasticsearch.repositories.enabled=true
-
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
 spring.http.multipart.maxFileSize=10Mb
 spring.http.multipart.maxRequestSize=10Mb
-
-#SpringMail
-spring.mail.host=smtp.qq.com
-spring.mail.username=befamouscoder@163.com
-spring.mail.password=*******
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-
-# REDIS (RedisProperties)
-# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
-spring.redis.database=0
-spring.redis.host=192.168.1.88
-spring.redis.password=
-spring.redis.port=6379
-spring.redis.pool.max-idle=100
-spring.redis.pool.min-idle=1
-spring.redis.pool.max-active=1000
-spring.redis.pool.max-wait=-1
-
 #MyBatisPlus
 mybatis-plus.mapper-locations=classpath:/mapper/*Dao.xml
 mybatis-plus.typeAliasesPackage=com.secret.entity
@@ -79,59 +39,33 @@ mybatis-plus.global-config.refresh-mapper=true
 #mybatis-plus.global-config.sql-injector=com.joey.*
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.configuration.cache-enabled=false
-
 #\u9759\u6001\u8D44\u6E90\u6620\u5C04
 spring.resources.static-locations=/statics
-
-#FreeMaker
-spring.freemarker.template-loader-path=/WEB-INF/templates
-spring.freemarker.allow-request-override=false
-spring.freemarker.cache=false
-spring.freemarker.charset=UTF-8
-spring.freemarker.check-template-location=true
-spring.freemarker.content-type=text/html
-spring.freemarker.expose-request-attributes=true
-spring.freemarker.expose-session-attributes=true
-spring.freemarker.request-context-attribute=rc
-#spring.freemarker.tag_syntax=auto_detect
-spring.freemarker.suffix=.ftl
-spring.freemarker.settings.number_format=0.##
-
 #JDBC
 # \u6570\u636E\u5E93\u8BBF\u95EE\u914D\u7F6E
 # \u4E3B\u6570\u636E\u6E90\uFF0C\u9ED8\u8BA4\u7684
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/secret?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
-# \u4E0B\u9762\u4E3A\u8FDE\u63A5\u6C60\u7684\u8865\u5145\u8BBE\u7F6E\uFF0C\u5E94\u7528\u5230\u4E0A\u9762\u6240\u6709\u6570\u636E\u6E90\u4E2D
-# \u521D\u59CB\u5316\u5927\u5C0F\uFF0C\u6700\u5C0F\uFF0C\u6700\u5927
+spring.datasource.url=jdbc:mysql://103.39.222.98:3306/secret?allowMultiQueries=false&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=secret
+spring.datasource.password=6P3MSM3X4fiZaPW3
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
 spring.datasource.maxActive=20
-# \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
 spring.datasource.maxWait=60000
-# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
 spring.datasource.timeBetweenEvictionRunsMillis=60000
-# \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
 spring.datasource.minEvictableIdleTimeMillis=300000
 spring.datasource.validationQuery=SELECT 1 FROM DUAL
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
-# \u6253\u5F00PSCache\uFF0C\u5E76\u4E14\u6307\u5B9A\u6BCF\u4E2A\u8FDE\u63A5\u4E0APSCache\u7684\u5927\u5C0F
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# \u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters\uFF0C\u53BB\u6389\u540E\u76D1\u63A7\u754C\u9762sql\u65E0\u6CD5\u7EDF\u8BA1\uFF0C'wall'\u7528\u4E8E\u9632\u706B\u5899
 spring.datasource.filters=stat,wall,log4j
-# \u901A\u8FC7connectProperties\u5C5E\u6027\u6765\u6253\u5F00mergeSql\u529F\u80FD\uFF1B\u6162SQL\u8BB0\u5F55
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-# \u5408\u5E76\u591A\u4E2ADruidDataSource\u7684\u76D1\u63A7\u6570\u636E
-#spring.datasource.useGlobalDataSourceStat=true
-# \u66F4\u591A\u6570\u636E\u6E90
-#custom.datasource.ds1.type=com.alibaba.druid.pool.DruidDataSource
-custom.datasource.ds1.driverClassName=com.mysql.jdbc.Driver
-custom.datasource.ds1.url=jdbc:mysql://192.168.1.158:3306/secret_patent?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-custom.datasource.ds1.username=root
-custom.datasource.ds1.password=root
+# 加密密钥
+config.jwt.secret=iwqjhda8232bjgh432[cicada-smile]
+# token有效时长
+config.jwt.expire=3600
+# header 名称
+config.jwt.header=token
