--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -49,3 +49,11 @@ config.jwt.secret=iwqjhda8232bjgh432[cicada-smile]
 config.jwt.expire=3600
 # header Ãû³Æ
 config.jwt.header=token
+redis.server.host=localhost
+redis.server.port=6379
+redis.server.password=
+redis.server.timeOut=5000 
+redis.server.maxIdle=50   
+redis.server.maxWaitMillis=500
+redis.server.maxTotal=500 
+
