--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -69,3 +69,11 @@ config.jwt.secret=iwqjhda8232bjgh432[cicada-smile]
 config.jwt.expire=3600
 # header Ãû³Æ
 config.jwt.header=token
+cache.ehcache.config=classpath:ehcache.xml
+redis.server.host=103.39.222.98
+redis.server.port=6379
+redis.server.password=
+redis.server.timeOut=5000  
+redis.server.maxIdle=50    
+redis.server.maxWaitMillis=500 
+redis.server.maxTotal=500  
